--- a/LassoandRidge.ipynb
+++ b/LassoandRidge.ipynb
@@ -6,7 +6,7 @@
       "name": "Linear.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPGwSxdOKbakb9toa4KbMZS",
+      "authorship_tag": "ABX9TyOMjvUT3KbOG+X2ciQZ8CL0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "from google.colab import files\n",
         "uploaded=files.upload()"
       ],
-      "execution_count": 121,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -204,7 +204,7 @@
         "\n",
         "    w = w - (L * D_w)\n",
         "    b = b - (L * D_b)\n",
-        "  print(\"Final l2 weight \", w, \"final beta is \", b)\n",
+        "  print(\"Final l1 weight \", w, \"final beta is \", b)\n",
         "  return Y_hat"
       ],
       "execution_count": 0,
@@ -229,7 +229,7 @@
         "    D_b = (-2/N) * sum(Y - Y_hat)\n",
         "    w = w - (L * D_w)\n",
         "    b = b - (L * D_b)\n",
-        "  print(\"final weight is\", w, \"final beta is\", b)\n",
+        "  print(\"final l2\", w, \"final beta is\", b)\n",
         "  return Y_hat"
       ],
       "execution_count": 0,
@@ -256,7 +256,7 @@
         "ax2.plot(epoch_count_list,epoch_error_list)\n",
         "epoch_error_list.clear()"
       ],
-      "execution_count": 128,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
